ISP20211003 Quality Web-Final Inspection Feature(module: Inspection) [後端] 階段commit

--- a/Quality/BusinessLogicLayerTests/BusinessLogicLayerTests.csproj
+++ b/Quality/BusinessLogicLayerTests/BusinessLogicLayerTests.csproj
@@ -59,6 +59,8 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\FinalInspection\FinalInspectionAddDefectServiceTests.cs" />
+    <Compile Include="Service\FinalInspection\FinalInspectionBeautifulProductAuditServiceTests.cs" />
+    <Compile Include="Service\FinalInspection\FinalInspectionMoistureServiceTests.cs" />
     <Compile Include="Service\QueryTests.cs" />
     <Compile Include="Service\MockupCrockingTests.cs" />
     <Compile Include="Service\FinalInspection\FinalInspectionServiceTests.cs" />
