--- a/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -69,6 +69,8 @@
   <ItemGroup>
     <Compile Include="Common.cs" />
     <Compile Include="Interface\Authority\IAuthorityService.cs" />
+    <Compile Include="Interface\FinalInspection\IFinalInspectionMoistureService.cs" />
+    <Compile Include="Interface\FinalInspection\IFinalInspectionBeautifulProductAuditService.cs" />
     <Compile Include="Interface\FinalInspection\IFinalInspectionAddDefectService.cs" />
     <Compile Include="Interface\BulkFGT\IGarmentTest_Service.cs" />
     <Compile Include="Interface\FinalInspection\IQueryService.cs" />
@@ -85,6 +87,8 @@
     <Compile Include="Interface\SampleRFT\IRFTPerLineService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\Authority\AuthorityService.cs" />
+    <Compile Include="Service\FinalInspection\FinalInspectionMoistureService.cs" />
+    <Compile Include="Service\FinalInspection\FinalInspectionBeautifulProductAuditService.cs" />
     <Compile Include="Service\FinalInspection\FinalInspectionAddDefectService.cs" />
     <Compile Include="Service\BulkFGT\GarmentTest_Service.cs" />
     <Compile Include="Service\FinalInspection\QueryService.cs" />
