完成共用視窗

--- a/Quality/Quality/Quality.csproj
+++ b/Quality/Quality/Quality.csproj
@@ -694,6 +694,7 @@
     <Content Include="Views\PublicWondow\PictureList.cshtml" />
     <Content Include="Views\Shared\ScreenShot.cshtml" />
     <Content Include="XLT\FinalInspectionReport.xlsx" />
+    <Content Include="Views\PublicWondow\TestFailMailList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
