--- a/Quality/Quality/Quality.csproj
+++ b/Quality/Quality/Quality.csproj
@@ -273,6 +273,8 @@
     <Content Include="Areas\SampleRFT\Views\PicturesDummy\Index.cshtml" />
     <Content Include="Areas\SampleRFT\Views\Measurement\Index.cshtml" />
     <Content Include="Areas\BulkFGT\Views\GarmentTest\Index.cshtml" />
+    <Content Include="Areas\FinalInspection\Views\Query\_Tab1_Layout.cshtml" />
+    <Content Include="Areas\FinalInspection\Views\Query\_Tab2_Layout.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
