--- a/Quality/Quality/Quality.csproj
+++ b/Quality/Quality/Quality.csproj
@@ -263,6 +263,7 @@
     <Content Include="Areas\SampleRFT\Views\PicturesDummy\Index.cshtml" />
     <Content Include="Areas\SampleRFT\Views\Measurement\Index.cshtml" />
     <Content Include="Areas\BulkFGT\Views\GarmentTest\Index.cshtml" />
+    <Content Include="Areas\BulkFGT\Views\GarmentTest\Detail.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
