--- a/Quality/BusinessLogicLayerTests/BusinessLogicLayerTests.csproj
+++ b/Quality/BusinessLogicLayerTests/BusinessLogicLayerTests.csproj
@@ -57,6 +57,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\BulkFGT\GarmentTest_ServiceTests.cs" />
     <Compile Include="Service\QueryTests.cs" />
     <Compile Include="Service\MockupCrockingTests.cs" />
     <Compile Include="Service\FinalInspection\FinalInspectionServiceTests.cs" />
