ISP20211063 Mail BusinessLogicLayer > SendMail
class SendMail_Request
其中 FileList 只須檔案名
附件會去這路徑找檔案:根目錄\TMP\

上傳檔案
位置:根目錄\TMP\
Quality.Areas> FileActionController
HttpPost
ActionResult FileUpload(HttpPostedFileBase file)

ADOHelper
加入Excel轉PDF function

Quailty> Areas  > Controllers > MockupCrockingController
ActionResult DownLoad()
產生 PDF 丟回 MemoryStream

--- a/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Interface\Authority\IAuthorityService.cs" />
     <Compile Include="Interface\BulkFGT\IGarmentTest_Service.cs" />
     <Compile Include="Interface\FinalInspection\IQueryService.cs" />
+    <Compile Include="Interface\ISendMailService.cs" />
     <Compile Include="Interface\IMockupCrockingService.cs" />
     <Compile Include="Interface\SampleRFT\IBACriteriaService.cs" />
     <Compile Include="Interface\BulkFGT\IBulkFGTMailGroup_Service.cs" />
@@ -86,6 +87,7 @@
     <Compile Include="Service\Authority\AuthorityService.cs" />
     <Compile Include="Service\BulkFGT\GarmentTest_Service.cs" />
     <Compile Include="Service\FinalInspection\QueryService.cs" />
+    <Compile Include="Service\SendMailService.cs" />
     <Compile Include="Service\MockupCrockingService.cs" />
     <Compile Include="Service\PublicWindowService.cs" />
     <Compile Include="Service\SampleRFT\BACriteriaService.cs" />
