--- a/Quality/DatabaseObject/DatabaseObject.csproj
+++ b/Quality/DatabaseObject/DatabaseObject.csproj
@@ -141,6 +141,9 @@
     <Compile Include="ResultModel\UserList_Authority.cs" />
     <Compile Include="ResultModel\UserList_Browse.cs" />
     <Compile Include="ViewModel\BACriteria_ViewModel.cs" />
+    <Compile Include="ViewModel\BulkFGT\GarmentTest_Detail_Apperance_ViewModel.cs" />
+    <Compile Include="ViewModel\BulkFGT\GarmentTest_Detail_FGPT_ViewModel.cs" />
+    <Compile Include="ViewModel\BulkFGT\GarmentTest_Detail_FGWT_ViewModel.cs" />
     <Compile Include="ViewModel\BulkFGT\GarmentTest_Detail_ViewModel.cs" />
     <Compile Include="ViewModel\BulkFGT\GarmentTest_ViewModel.cs" />
     <Compile Include="ViewModel\FinalInspection\AddDefect.cs" />
