--- a/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -69,6 +69,7 @@
   <ItemGroup>
     <Compile Include="Common.cs" />
     <Compile Include="Interface\Authority\IAuthorityService.cs" />
+    <Compile Include="Interface\FinalInspection\IFinalInspectionMeasurementService.cs" />
     <Compile Include="Interface\FinalInspection\IFinalInspectionMoistureService.cs" />
     <Compile Include="Interface\FinalInspection\IFinalInspectionBeautifulProductAuditService.cs" />
     <Compile Include="Interface\FinalInspection\IFinalInspectionAddDefectService.cs" />
@@ -88,6 +89,7 @@
     <Compile Include="Interface\SampleRFT\IRFTPerLineService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\Authority\AuthorityService.cs" />
+    <Compile Include="Service\FinalInspection\FinalInspectionMeasurementService.cs" />
     <Compile Include="Service\FinalInspection\FinalInspectionMoistureService.cs" />
     <Compile Include="Service\FinalInspection\FinalInspectionBeautifulProductAuditService.cs" />
     <Compile Include="Service\FinalInspection\FinalInspectionAddDefectService.cs" />
