--- a/Quality/BusinessLogicLayerTests/BusinessLogicLayerTests.csproj
+++ b/Quality/BusinessLogicLayerTests/BusinessLogicLayerTests.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\FinalInspection\FinalInspectionAddDefectServiceTests.cs" />
     <Compile Include="Service\FinalInspection\FinalInspectionBeautifulProductAuditServiceTests.cs" />
+    <Compile Include="Service\FinalInspection\FinalInspectionMeasurementServiceTests.cs" />
     <Compile Include="Service\FinalInspection\FinalInspectionMoistureServiceTests.cs" />
     <Compile Include="Service\QueryTests.cs" />
     <Compile Include="Service\MockupCrockingTests.cs" />
