建立StyleManagement模組，並完成Style List功能

--- a/Quality/Quality/Quality.csproj
+++ b/Quality/Quality/Quality.csproj
@@ -163,6 +163,8 @@
     <Compile Include="Areas\SampleRFT\Controllers\PFTperLineController.cs" />
     <Compile Include="Areas\SampleRFT\Controllers\PicturesDummyController.cs" />
     <Compile Include="Areas\SampleRFT\SampleRFTAreaRegistration.cs" />
+    <Compile Include="Areas\StyleManagement\Controllers\StyleListController.cs" />
+    <Compile Include="Areas\StyleManagement\StyleManagementAreaRegistration.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PublicWondowController.cs" />
@@ -285,6 +287,10 @@
     <Content Include="Areas\FinalInspection\Views\Query\_Tab5_Layout.cshtml" />
     <Content Include="Areas\FinalInspection\Views\Query\_Tab6_Layout.cshtml" />
     <Content Include="Areas\FinalInspection\Views\Query\_Tab7_Layout.cshtml" />
+    <Content Include="Areas\StyleManagement\Views\web.config" />
+    <Content Include="Areas\StyleManagement\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\StyleManagement\Views\Shared\_Layout.cshtml" />
+    <Content Include="Areas\StyleManagement\Views\StyleList\Index.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -716,6 +722,7 @@
     <Folder Include="Areas\BulkFGT\Views\MockupCrocking\" />
     <Folder Include="Areas\FinalInspection\Models\" />
     <Folder Include="Areas\SampleRFT\Data\" />
+    <Folder Include="Areas\StyleManagement\Models\" />
     <Folder Include="Models\" />
     <Folder Include="ThirdParty\plugins\bootstrap-fileinput\fonts\" />
     <Folder Include="Views\Authority\" />
