--- a/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -40,6 +40,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.7\lib\net45\System.Web.Helpers.dll</HintPath>
@@ -69,6 +70,7 @@
   <ItemGroup>
     <Compile Include="Common.cs" />
     <Compile Include="Interface\Authority\IAuthorityService.cs" />
+    <Compile Include="Interface\FinalInspection\IFinalInspectionOthersService.cs" />
     <Compile Include="Interface\FinalInspection\IFinalInspectionMeasurementService.cs" />
     <Compile Include="Interface\FinalInspection\IFinalInspectionMoistureService.cs" />
     <Compile Include="Interface\FinalInspection\IFinalInspectionBeautifulProductAuditService.cs" />
@@ -89,6 +91,7 @@
     <Compile Include="Interface\SampleRFT\IRFTPerLineService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\Authority\AuthorityService.cs" />
+    <Compile Include="Service\FinalInspection\FinalInspectionOthersService.cs" />
     <Compile Include="Service\FinalInspection\FinalInspectionMeasurementService.cs" />
     <Compile Include="Service\FinalInspection\FinalInspectionMoistureService.cs" />
     <Compile Include="Service\FinalInspection\FinalInspectionBeautifulProductAuditService.cs" />
