--- a/Quality/BusinessLogicLayerTests/BusinessLogicLayerTests.csproj
+++ b/Quality/BusinessLogicLayerTests/BusinessLogicLayerTests.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Service\FinalInspection\FinalInspectionBeautifulProductAuditServiceTests.cs" />
     <Compile Include="Service\FinalInspection\FinalInspectionMeasurementServiceTests.cs" />
     <Compile Include="Service\FinalInspection\FinalInspectionMoistureServiceTests.cs" />
+    <Compile Include="Service\FinalInspection\FinalInspectionOthersServiceTests.cs" />
     <Compile Include="Service\QueryTests.cs" />
     <Compile Include="Service\MockupCrockingTests.cs" />
     <Compile Include="Service\FinalInspection\FinalInspectionServiceTests.cs" />
