--- a/Quality/DatabaseObject/DatabaseObject.csproj
+++ b/Quality/DatabaseObject/DatabaseObject.csproj
@@ -96,6 +96,11 @@
     <Compile Include="ProductionDB\Brand.cs" />
     <Compile Include="ProductionDB\DropDownList.cs" />
     <Compile Include="ProductionDB\Factory.cs" />
+    <Compile Include="ProductionDB\FIR.cs" />
+    <Compile Include="ProductionDB\FIR_Laboratory.cs" />
+    <Compile Include="ProductionDB\FIR_Laboratory_Crocking.cs" />
+    <Compile Include="ProductionDB\FIR_Laboratory_Heat.cs" />
+    <Compile Include="ProductionDB\FIR_Laboratory_Wash.cs" />
     <Compile Include="ProductionDB\GarmentDefectCode.cs" />
     <Compile Include="ProductionDB\GarmentDefectType.cs" />
     <Compile Include="ProductionDB\GarmentTest.cs" />
@@ -111,6 +116,8 @@
     <Compile Include="ProductionDB\Orders.cs" />
     <Compile Include="ProductionDB\Order_Location.cs" />
     <Compile Include="ProductionDB\Order_Qty.cs" />
+    <Compile Include="ProductionDB\Oven.cs" />
+    <Compile Include="ProductionDB\Oven_Detail.cs" />
     <Compile Include="ProductionDB\Pass1.cs" />
     <Compile Include="ProductionDB\Season.cs" />
     <Compile Include="ProductionDB\SewingLine.cs" />
@@ -133,6 +140,8 @@
     <Compile Include="ResultModelBase.cs" />
     <Compile Include="ResultModel\AuthoritybyPosition.cs" />
     <Compile Include="ResultModel\BACriteria_Result.cs" />
+    <Compile Include="ResultModel\FabricCrkShrkTest_Result.cs" />
+    <Compile Include="ResultModel\FabricOvenTest_Result.cs" />
     <Compile Include="ResultModel\LogIn_Result.cs" />
     <Compile Include="ResultModel\Measurement_ResultModel.cs" />
     <Compile Include="ResultModel\MockupUpdatePicture_Result.cs" />
