--- a/Quality/Quality/Quality.csproj
+++ b/Quality/Quality/Quality.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helper\Attribute.cs" />
     <Compile Include="Helper\CheckWorkDate.cs" />
     <Compile Include="Helper\SetListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -723,6 +724,9 @@
     <Content Include="XLT\FinalInspectionReport.xlsx" />
     <Content Include="Views\PublicWondow\TestFailMailList.cshtml" />
     <Content Include="XLT\MockupCrocking.xltx" />
+    <Content Include="XLT\CFT Comments.xltx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
