--- a/Quality/BusinessLogicLayerTests/BusinessLogicLayerTests.csproj
+++ b/Quality/BusinessLogicLayerTests/BusinessLogicLayerTests.csproj
@@ -64,7 +64,7 @@
     <Compile Include="Service\FinalInspection\FinalInspectionMeasurementServiceTests.cs" />
     <Compile Include="Service\FinalInspection\FinalInspectionMoistureServiceTests.cs" />
     <Compile Include="Service\FinalInspection\FinalInspectionOthersServiceTests.cs" />
-    <Compile Include="Service\QueryTests.cs" />
+    <Compile Include="Service\FinalInspection\QueryServiceTests.cs" />
     <Compile Include="Service\MockupCrockingTests.cs" />
     <Compile Include="Service\FinalInspection\FinalInspectionServiceTests.cs" />
     <Compile Include="Service\FinalInspection\FinalInspectionSettingServiceTests.cs" />
