ISP20211063 MockupCrocking 轉pdf, 檔名前加上路徑 回傳pdf檔名加上server存放路徑
sendMail移除from,此訊息用production.system的資訊

加上
MockupCrocking  Getpdf
sendmail測試

--- a/Quality/BusinessLogicLayerTests/BusinessLogicLayerTests.csproj
+++ b/Quality/BusinessLogicLayerTests/BusinessLogicLayerTests.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Service\FinalInspection\FinalInspectionSettingServiceTests.cs" />
     <Compile Include="Service\InspectionServiceTests.cs" />
     <Compile Include="Service\CFTCommentsTests.cs" />
+    <Compile Include="Service\SendmailTests.cs" />
     <Compile Include="Service\RFTPerLineServiceTests.cs" />
     <Compile Include="Service\BulkFGT\BulkFGTMailGroupTest.cs" />
     <Compile Include="Service\SampleRFT\MeasurementServiceTests.cs" />
