--- a/Quality/Quality/Quality.csproj
+++ b/Quality/Quality/Quality.csproj
@@ -189,6 +189,7 @@
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PublicWondowController.cs" />
+    <Compile Include="Controllers\SendMailAttachfilesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -321,6 +322,7 @@
     <Content Include="Areas\SampleRFT\Views\CFTComments\Index.cshtml" />
     <Content Include="Areas\BulkFGT\Views\SearchList\Index.cshtml" />
     <Content Include="Areas\BulkFGT\Views\PullingTest\Index.cshtml" />
+    <Content Include="Areas\BulkFGT\Views\MockupCrocking\Index.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -755,13 +757,13 @@
     <Content Include="XLT\Search List.xlsx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Views\SendMailAttachfiles\SendMailer.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Authority\Data\" />
     <Folder Include="Areas\BulkFGT\Data\" />
     <Folder Include="Areas\BulkFGT\Views\FabricOvenTest\" />
-    <Folder Include="Areas\BulkFGT\Views\MockupCrocking\" />
     <Folder Include="Areas\FinalInspection\Models\" />
     <Folder Include="Areas\SampleRFT\Data\" />
     <Folder Include="Areas\StyleManagement\Models\" />
