--- a/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Common.cs" />
     <Compile Include="Interface\Authority\IAuthorityService.cs" />
     <Compile Include="Interface\BulkFGT\IFabricCrkShrkTest_Service.cs" />
+    <Compile Include="Interface\BulkFGT\IFabricOvenTestService.cs" />
     <Compile Include="Interface\BulkFGT\IMockupCrockingService.cs" />
     <Compile Include="Interface\BulkFGT\ISearchListService.cs" />
     <Compile Include="Interface\FinalInspection\IFinalInspectionOthersService.cs" />
@@ -117,6 +118,7 @@
     <Compile Include="Interface\StyleManagement\IStyleListService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\Authority\AuthorityService.cs" />
+    <Compile Include="Service\BulkFGT\FabricOvenTestService.cs" />
     <Compile Include="Service\BulkFGT\FabricCrkShrkTest_Service.cs" />
     <Compile Include="Service\BulkFGT\MockupCrockingService.cs" />
     <Compile Include="Service\BulkFGT\SearchListService.cs" />
