--- a/Quality/ProductionDataAccessLayer/ProductionDataAccessLayer.csproj
+++ b/Quality/ProductionDataAccessLayer/ProductionDataAccessLayer.csproj
@@ -37,6 +37,7 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.7\lib\net45\System.Web.Helpers.dll</HintPath>
     </Reference>
@@ -67,6 +68,7 @@
     <Compile Include="Interface\IBrandProvider.cs" />
     <Compile Include="Interface\IDropDownListProvider.cs" />
     <Compile Include="Interface\IFactoryProvider.cs" />
+    <Compile Include="Interface\IFabricOvenTestProvider.cs" />
     <Compile Include="Interface\IFIRLaboratoryCrockingProvider.cs" />
     <Compile Include="Interface\IFIRLaboratoryHeatProvider.cs" />
     <Compile Include="Interface\IFIRLaboratoryProvider.cs" />
@@ -91,6 +93,7 @@
     <Compile Include="Interface\IOvenDetailProvider.cs" />
     <Compile Include="Interface\IOvenProvider.cs" />
     <Compile Include="Interface\IPass1Provider.cs" />
+    <Compile Include="Interface\IScaleProvider.cs" />
     <Compile Include="Interface\ISeasonProvider.cs" />
     <Compile Include="Interface\ISewingLineProvider.cs" />
     <Compile Include="Interface\IStyleArticleProvider.cs" />
@@ -104,6 +107,7 @@
     <Compile Include="Provider\MSSQL\BrandProvider.cs" />
     <Compile Include="Provider\MSSQL\DropDownListProvider.cs" />
     <Compile Include="Provider\MSSQL\FactoryProvider.cs" />
+    <Compile Include="Provider\MSSQL\FabricOvenTestProvider.cs" />
     <Compile Include="Provider\MSSQL\FIRLaboratoryCrockingProvider.cs" />
     <Compile Include="Provider\MSSQL\FIRLaboratoryHeatProvider.cs" />
     <Compile Include="Provider\MSSQL\FIRLaboratoryProvider.cs" />
@@ -129,6 +133,7 @@
     <Compile Include="Provider\MSSQL\OvenProvider.cs" />
     <Compile Include="Provider\MSSQL\Pass1Provider.cs" />
     <Compile Include="Provider\MSSQL\PublicWondowProvider.cs" />
+    <Compile Include="Provider\MSSQL\ScaleProvider.cs" />
     <Compile Include="Provider\MSSQL\SeasonProvider.cs" />
     <Compile Include="Provider\MSSQL\SewingLineProvider.cs" />
     <Compile Include="Provider\MSSQL\StyleArticleProvider.cs" />
