--- a/Quality/ProductionDataAccessLayer/ProductionDataAccessLayer.csproj
+++ b/Quality/ProductionDataAccessLayer/ProductionDataAccessLayer.csproj
@@ -83,6 +83,8 @@
     <Compile Include="Interface\IGarmentTestProvider.cs" />
     <Compile Include="Interface\IMockupCrockingDetailProvider.cs" />
     <Compile Include="Interface\IMockupCrockingProvider.cs" />
+    <Compile Include="Interface\IMockupWashDetailProvider.cs" />
+    <Compile Include="Interface\IMockupWashProvider.cs" />
     <Compile Include="Interface\INewCDCodeProvider.cs" />
     <Compile Include="Interface\IOrderLocationProvider.cs" />
     <Compile Include="Interface\IOrderQtyProvider.cs" />
@@ -120,6 +122,8 @@
     <Compile Include="Provider\MSSQL\GarmentTestProvider.cs" />
     <Compile Include="Provider\MSSQL\MockupCrockingDetailProvider.cs" />
     <Compile Include="Provider\MSSQL\MockupCrockingProvider.cs" />
+    <Compile Include="Provider\MSSQL\MockupWashDetailProvider.cs" />
+    <Compile Include="Provider\MSSQL\MockupWashProvider.cs" />
     <Compile Include="Provider\MSSQL\NewCDCodeProvider.cs" />
     <Compile Include="Provider\MSSQL\OrderLocationProvider.cs" />
     <Compile Include="Provider\MSSQL\OrderQtyProvider.cs" />
