ISP20211067 加入GetAccessoryRefNo表身AccessoryRefNo下拉來源

--- a/Quality/DatabaseObject/DatabaseObject.csproj
+++ b/Quality/DatabaseObject/DatabaseObject.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Public\CompareBase.cs" />
     <Compile Include="Public\WindowModel.cs" />
     <Compile Include="RequestModel\FinalInspection_Query.cs" />
+    <Compile Include="RequestModel\MockupWash_Request.cs" />
     <Compile Include="RequestModel\MockupCrocking_Request.cs" />
     <Compile Include="RequestModel\FinalInspection_Request.cs" />
     <Compile Include="RequestModel\GarmentTest_Request.cs" />
