--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ Quality/QualityTests/obj/Debug/
 /Quality/QualityTests/obj
 /Quality/packages
 Quality/Quality/Properties/PublishProfiles/FolderProfile.pubxml.user
+Quality/Quality/TMP/
