--- a/Quality/Quality/Quality.csproj
+++ b/Quality/Quality/Quality.csproj
@@ -173,6 +173,7 @@
     <Compile Include="Areas\BulkFGT\Controllers\FabricOvenTestController.cs" />
     <Compile Include="Areas\BulkFGT\Controllers\GarmentTestController.cs" />
     <Compile Include="Areas\BulkFGT\Controllers\MockupCrockingController.cs" />
+    <Compile Include="Areas\BulkFGT\Controllers\MockupWashController.cs" />
     <Compile Include="Areas\BulkFGT\Controllers\PullingTestController.cs" />
     <Compile Include="Areas\BulkFGT\Controllers\SearchListController.cs" />
     <Compile Include="Areas\FinalInspection\Controllers\InspectionController.cs" />
@@ -329,6 +330,7 @@
     <Content Include="Areas\BulkFGT\Views\AccessoryOvenWash\WashTest.cshtml" />
     <Content Include="Areas\BulkFGT\Views\FabricOvenTest\Index.cshtml" />
     <Content Include="Areas\BulkFGT\Views\FabricOvenTest\Detail.cshtml" />
+    <Content Include="Areas\BulkFGT\Views\MockupWash\Index.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
